[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
postcard = { version = "1.1.3", features = ["alloc", "postcard-derive"] }
quinn = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
